<resources>
    <string name="app_name">PTIApplicationV2</string>
    <string name="pti_home_name">პტი</string>
    <string name="description">პერიოდული ტექნიკური ინსპექტირება</string>
    <string name="visit_button_text_name">ვიზიტის დაჯავშნა</string>
    <string name="calculate_date">თარიღის გამოთვლა</string>
    <string name="suggestion_text">ან</string>
    <string name="pti_date_finder">გაიგეთ როდის უწევს თქვენს ავტომობილს ტექინსპექტირება</string>
    <string name="email">"ელ-ფოსტა"</string>
    <string name="password">"პაროლი"</string>
    <string name="authorization">ავტორიზაცია</string>
    <string name="forgot_password">დაგავიწყდა პაროლი ?</string>
    <string name="register">რეგისტრაცია</string>
    <string name="log_in">შესვლა</string>
    <string name="name_surname">სახელი და გვარი</string>
    <string name="phone_number">ტელეფონის ნომერი</string>
    <string name="license_plate">სახელმწიფო ნომერი</string>
    <string name="vehicle_category">ავტომობილის კატეგორია</string>
    <string name="general_error_text">დაფიქსირდა ტექნიკური შეცდომა, თავიდან ცადეთ</string>
    <string name="calculate_pti_date">გამოთვალე პტი თარიღი</string>
    <string name="hot_line">ცხელი ხაზი 0322047979</string>
    <string name="pti_price">ინსპექტირების საფასური: </string>
    <string name="pti_date">პტი თარიღი:</string>
    <string name="valid_until">მოქმედების ვადა:</string>
    <string name="pti_license_plate">სახელმწიფო ნომერი:</string>
    <string name="x_button">X</string>
    <string name="inspected">ინსპექტირებულია</string>
    <string name="change_password">პაროლის ცვლილება</string>
    <string name="change_password_text">პაროლის შესაცვლელად, საჭიროა ჩაწეროთ ელ-ფოსტის მისამართი რომლითაც დარეგისტრირებული ხართ საიტზე</string>
    ><string name="next_button">შემდეგი</string>
</resources>