<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fading_bg">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pti_logo"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/pti_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView

        android:id="@+id/textView2"
        android:layout_width="381dp"
        android:layout_height="77dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pti_logo"
        tools:ignore="TextSizeCheck" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:text="@string/change_password_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        style="@style/ThemeOverlay.Material3.TextInputEditText"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:background="@color/white"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="VisualLintTextFieldSize" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fading_bg_btn"
        android:text="@string/next_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_15"
        android:gravity="center"
        android:text="@string/hot_line"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>