<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6BD5D7"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ptiHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pti_home_name"
        android:textColor="#F0EAEA"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ptiDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="#F0EAEA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ptiHeaderTextView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:background="@color/cardview_dark_background"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptiDescription">

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/container_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/car_image"
                app:layout_constraintBottom_toTopOf="@+id/material_card_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ptiDescription"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/calculate_date_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/calculate_date"
                android:textColor="@color/black"
                app:cornerRadius="5dp"
                app:rippleColor="@color/white"
                app:strokeColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/suggestion_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/suggestion_text"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/visit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#6BD5D7"
                android:text="@string/visit_button_text_name"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                app:rippleColor="@color/white"
                app:strokeColor="@color/black" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>